# simplify-mesh

./: .gitignore  CMakeLists.txt  README
cmake/: FindVCG.cmake
doc/: mesh_distance.org
src/: App.cpp  App.hpp  CMakeLists.txt  Job.hpp  Mesh.cpp  Mesh.hpp  Mesh_base.cpp  Mesh_io.cpp  Mesh_simplify.cpp  Process.cpp  Process.hpp  Scheduler.hpp  StaticScheduler.cpp  StaticScheduler.hpp  Task.hpp  Version.hpp.in  local_coarsening.cpp  local_coarsening.hpp  main.cpp  merging.cpp  merging.hpp  scheduler.hpp  scheduler_static.cpp  util.hpp
testing/: CMakeLists.txt  config.hpp.in  mesh_basics.cpp  mesh_io.cpp  mesh_send_recv.cpp  mesh_simplify.cpp  meshtest.cpp  scheduler.cpp  scheduler_test.cpp
